<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f44336"
    tools:context=".activity.Registration">

    <EditText
        android:id="@+id/etPersonName"
        android:inputType="textPersonName"
        style="@style/myStyle"
        android:layout_marginTop="80dp"
        android:hint="@string/name"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etEmailAddress"
        style="@style/myStyle"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPhone"
        style="@style/myStyle"
        android:layout_marginTop="15dp"
        android:hint="@string/phone"
        android:inputType="phone"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etAddress"
        style="@style/myStyle"
        android:layout_marginTop="15dp"
        android:hint="@string/address"
        android:inputType="textPostalAddress"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/myStyle"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/etPassword2"
        style="@style/myStyle"
        android:layout_marginTop="15dp"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:importantForAutofill="no" />

    <Button
        android:background="#ba000d"
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/register" />
</LinearLayout>