<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f44336"
    android:orientation="vertical"
    tools:context=".activity.ForgotPassword">

    <TextView
        android:layout_marginTop="130dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:text="@string/enter_mob_email" />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:hint="@string/phone"
        android:background="#ffffff"
        android:padding="10dp"
        android:id="@+id/etPhone2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone"
        android:importantForAutofill="no" />

    <EditText
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="#ffffff"
        android:hint="@string/email"
        android:padding="10dp"
        android:id="@+id/etEmailAddress2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:importantForAutofill="no" />

    <Button
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:background="#ab000d"
        android:id="@+id/btnForgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next" />

</LinearLayout>